--- a/Template.ipynb
+++ b/Template.ipynb
@@ -1093,11 +1093,444 @@
     "# ax3.set_ylabel('Running Time(s)')\n",
     "ax0.set_title('')\n",
     "# ax.text(4, 0.4, r'$$')\n",
+    "\n",
     "ax0.legend(('MNIST','FashionMNIST','CIFAR10'), loc='upper right')\n",
     "ax1.legend(('MNIST(train)','FashionMNIST(train)','CIFAR(train)','MNIST(test)','FashionMNIST(test)','CIFAR(test)',), loc='lower right')\n",
     "# ax2.legend(('Mnist','Fashionmnist'), loc='lower right')\n",
     "# ax3.legend(('Mnist','Fashionmnist'), loc='lower right')\n",
     "fig.savefig('test.png', transparent=True, dpi=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-05T04:01:45.248012Z",
+     "start_time": "2019-12-05T04:01:45.219976Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[tensor(2.2860),\n",
+       "  tensor(2.2476),\n",
+       "  tensor(2.1959),\n",
+       "  tensor(2.1782),\n",
+       "  tensor(2.1212),\n",
+       "  tensor(2.0943),\n",
+       "  tensor(2.0815),\n",
+       "  tensor(2.0459),\n",
+       "  tensor(2.0273),\n",
+       "  tensor(1.9945),\n",
+       "  tensor(1.9663),\n",
+       "  tensor(1.9493),\n",
+       "  tensor(1.9184),\n",
+       "  tensor(1.8992),\n",
+       "  tensor(1.8951),\n",
+       "  tensor(1.8593),\n",
+       "  tensor(1.8722),\n",
+       "  tensor(1.8558),\n",
+       "  tensor(1.8249),\n",
+       "  tensor(1.7948),\n",
+       "  tensor(1.7611),\n",
+       "  tensor(1.7472),\n",
+       "  tensor(1.6955),\n",
+       "  tensor(1.6995),\n",
+       "  tensor(1.6645),\n",
+       "  tensor(1.6389),\n",
+       "  tensor(1.5761),\n",
+       "  tensor(1.5433),\n",
+       "  tensor(1.5458),\n",
+       "  tensor(1.5557),\n",
+       "  tensor(1.4849),\n",
+       "  tensor(1.4529),\n",
+       "  tensor(1.4630),\n",
+       "  tensor(1.3776),\n",
+       "  tensor(1.3706),\n",
+       "  tensor(1.3793),\n",
+       "  tensor(1.3208),\n",
+       "  tensor(1.2756),\n",
+       "  tensor(1.2400),\n",
+       "  tensor(1.2004)],\n",
+       " [tensor(2.2567),\n",
+       "  tensor(1.4350),\n",
+       "  tensor(0.9082),\n",
+       "  tensor(0.6432),\n",
+       "  tensor(0.4682),\n",
+       "  tensor(0.3697),\n",
+       "  tensor(0.3060),\n",
+       "  tensor(0.2360),\n",
+       "  tensor(0.2105),\n",
+       "  tensor(0.1647),\n",
+       "  tensor(0.1633),\n",
+       "  tensor(0.1475),\n",
+       "  tensor(0.1056),\n",
+       "  tensor(0.1252),\n",
+       "  tensor(0.1438),\n",
+       "  tensor(0.0957),\n",
+       "  tensor(0.0676),\n",
+       "  tensor(0.0583),\n",
+       "  tensor(0.0638),\n",
+       "  tensor(0.0488),\n",
+       "  tensor(0.0476),\n",
+       "  tensor(0.0768),\n",
+       "  tensor(0.0619),\n",
+       "  tensor(0.0358),\n",
+       "  tensor(0.0381),\n",
+       "  tensor(0.0302),\n",
+       "  tensor(0.0142),\n",
+       "  tensor(0.0162),\n",
+       "  tensor(0.0594),\n",
+       "  tensor(0.0495),\n",
+       "  tensor(0.1030),\n",
+       "  tensor(0.0364),\n",
+       "  tensor(0.0276),\n",
+       "  tensor(0.0143),\n",
+       "  tensor(0.0117),\n",
+       "  tensor(0.0135),\n",
+       "  tensor(0.0033),\n",
+       "  tensor(0.0342),\n",
+       "  tensor(0.0355),\n",
+       "  tensor(0.0665)],\n",
+       " [tensor(2.1940),\n",
+       "  tensor(1.6580),\n",
+       "  tensor(1.2017),\n",
+       "  tensor(0.9473),\n",
+       "  tensor(0.7942),\n",
+       "  tensor(0.7053),\n",
+       "  tensor(0.6903),\n",
+       "  tensor(0.6460),\n",
+       "  tensor(0.6123),\n",
+       "  tensor(0.5402),\n",
+       "  tensor(0.5267),\n",
+       "  tensor(0.4965),\n",
+       "  tensor(0.4647),\n",
+       "  tensor(0.4360),\n",
+       "  tensor(0.4398),\n",
+       "  tensor(0.3910),\n",
+       "  tensor(0.3693),\n",
+       "  tensor(0.3530),\n",
+       "  tensor(0.3273),\n",
+       "  tensor(0.3352),\n",
+       "  tensor(0.3295),\n",
+       "  tensor(0.3238),\n",
+       "  tensor(0.2851),\n",
+       "  tensor(0.2631),\n",
+       "  tensor(0.3018),\n",
+       "  tensor(0.2915),\n",
+       "  tensor(0.2504),\n",
+       "  tensor(0.2146),\n",
+       "  tensor(0.2453),\n",
+       "  tensor(0.2224),\n",
+       "  tensor(0.2196),\n",
+       "  tensor(0.2046),\n",
+       "  tensor(0.2092),\n",
+       "  tensor(0.2142),\n",
+       "  tensor(0.1795),\n",
+       "  tensor(0.1649),\n",
+       "  tensor(0.1756),\n",
+       "  tensor(0.1683),\n",
+       "  tensor(0.1560),\n",
+       "  tensor(0.1647)]]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AVE_LOSS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-05T04:01:32.850809Z",
+     "start_time": "2019-12-05T04:01:32.844939Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.1255,\n",
+       "  0.133,\n",
+       "  0.18650000000000003,\n",
+       "  0.1965,\n",
+       "  0.21000000000000005,\n",
+       "  0.225,\n",
+       "  0.23199999999999998,\n",
+       "  0.25150000000000006,\n",
+       "  0.26649999999999996,\n",
+       "  0.27349999999999997,\n",
+       "  0.29300000000000004,\n",
+       "  0.28450000000000003,\n",
+       "  0.3065,\n",
+       "  0.31299999999999994,\n",
+       "  0.31599999999999995,\n",
+       "  0.323,\n",
+       "  0.32399999999999995,\n",
+       "  0.32600000000000007,\n",
+       "  0.35750000000000004,\n",
+       "  0.33799999999999997,\n",
+       "  0.3625,\n",
+       "  0.376,\n",
+       "  0.3685,\n",
+       "  0.3835,\n",
+       "  0.393,\n",
+       "  0.39949999999999997,\n",
+       "  0.4370000000000001,\n",
+       "  0.44700000000000006,\n",
+       "  0.43800000000000006,\n",
+       "  0.44000000000000006,\n",
+       "  0.4675000000000001,\n",
+       "  0.471,\n",
+       "  0.4635000000000001,\n",
+       "  0.5040000000000002,\n",
+       "  0.5125,\n",
+       "  0.5205,\n",
+       "  0.5155000000000001,\n",
+       "  0.5394999999999999,\n",
+       "  0.5465,\n",
+       "  0.5745000000000001],\n",
+       " [0.1375,\n",
+       "  0.5055,\n",
+       "  0.6855,\n",
+       "  0.7929999999999999,\n",
+       "  0.859,\n",
+       "  0.8880000000000002,\n",
+       "  0.9045,\n",
+       "  0.9205,\n",
+       "  0.9305000000000001,\n",
+       "  0.9424999999999999,\n",
+       "  0.9404999999999999,\n",
+       "  0.9445,\n",
+       "  0.9664999999999999,\n",
+       "  0.9594999999999999,\n",
+       "  0.9525,\n",
+       "  0.9689999999999998,\n",
+       "  0.9785,\n",
+       "  0.9780000000000001,\n",
+       "  0.9804999999999999,\n",
+       "  0.9869999999999999,\n",
+       "  0.9854999999999998,\n",
+       "  0.977,\n",
+       "  0.9784999999999998,\n",
+       "  0.9884999999999999,\n",
+       "  0.9884999999999999,\n",
+       "  0.9914999999999999,\n",
+       "  0.9955,\n",
+       "  0.993,\n",
+       "  0.982,\n",
+       "  0.9899999999999999,\n",
+       "  0.9760000000000002,\n",
+       "  0.9894999999999999,\n",
+       "  0.9925,\n",
+       "  0.9949999999999999,\n",
+       "  0.9974999999999998,\n",
+       "  0.9959999999999998,\n",
+       "  0.999,\n",
+       "  0.9889999999999999,\n",
+       "  0.9889999999999999,\n",
+       "  0.9814999999999999],\n",
+       " [0.12800000000000003,\n",
+       "  0.306,\n",
+       "  0.5095000000000002,\n",
+       "  0.6305000000000001,\n",
+       "  0.6904999999999999,\n",
+       "  0.722,\n",
+       "  0.7235,\n",
+       "  0.759,\n",
+       "  0.764,\n",
+       "  0.7754999999999999,\n",
+       "  0.7875,\n",
+       "  0.8030000000000003,\n",
+       "  0.8155000000000001,\n",
+       "  0.8295,\n",
+       "  0.833,\n",
+       "  0.842,\n",
+       "  0.8554999999999999,\n",
+       "  0.8564999999999999,\n",
+       "  0.8755,\n",
+       "  0.873,\n",
+       "  0.8765000000000003,\n",
+       "  0.884,\n",
+       "  0.8895,\n",
+       "  0.9029999999999999,\n",
+       "  0.8905,\n",
+       "  0.8944999999999999,\n",
+       "  0.901,\n",
+       "  0.9169999999999998,\n",
+       "  0.9049999999999999,\n",
+       "  0.914,\n",
+       "  0.9179999999999999,\n",
+       "  0.924,\n",
+       "  0.9184999999999999,\n",
+       "  0.9199999999999999,\n",
+       "  0.9350000000000002,\n",
+       "  0.9399999999999997,\n",
+       "  0.9374999999999998,\n",
+       "  0.9369999999999999,\n",
+       "  0.9375,\n",
+       "  0.9400000000000001]]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TRAIN_ACC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-05T04:01:13.109834Z",
+     "start_time": "2019-12-05T04:01:13.103889Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.124,\n",
+       "  0.15599999999999997,\n",
+       "  0.205,\n",
+       "  0.21699999999999994,\n",
+       "  0.22199999999999998,\n",
+       "  0.22400000000000003,\n",
+       "  0.24000000000000005,\n",
+       "  0.24699999999999997,\n",
+       "  0.23900000000000002,\n",
+       "  0.254,\n",
+       "  0.269,\n",
+       "  0.26000000000000006,\n",
+       "  0.244,\n",
+       "  0.286,\n",
+       "  0.274,\n",
+       "  0.273,\n",
+       "  0.252,\n",
+       "  0.263,\n",
+       "  0.29,\n",
+       "  0.292,\n",
+       "  0.296,\n",
+       "  0.2920000000000001,\n",
+       "  0.29200000000000004,\n",
+       "  0.267,\n",
+       "  0.28,\n",
+       "  0.29800000000000004,\n",
+       "  0.29800000000000004,\n",
+       "  0.2919999999999999,\n",
+       "  0.304,\n",
+       "  0.29000000000000004,\n",
+       "  0.29100000000000004,\n",
+       "  0.304,\n",
+       "  0.27799999999999997,\n",
+       "  0.27999999999999997,\n",
+       "  0.291,\n",
+       "  0.29500000000000004,\n",
+       "  0.28600000000000003,\n",
+       "  0.29900000000000004,\n",
+       "  0.298,\n",
+       "  0.306],\n",
+       " [0.25600000000000006,\n",
+       "  0.607,\n",
+       "  0.682,\n",
+       "  0.755,\n",
+       "  0.807,\n",
+       "  0.8099999999999999,\n",
+       "  0.8400000000000001,\n",
+       "  0.842,\n",
+       "  0.851,\n",
+       "  0.8520000000000001,\n",
+       "  0.843,\n",
+       "  0.851,\n",
+       "  0.868,\n",
+       "  0.8710000000000001,\n",
+       "  0.868,\n",
+       "  0.8699999999999999,\n",
+       "  0.89,\n",
+       "  0.8739999999999999,\n",
+       "  0.8780000000000001,\n",
+       "  0.8800000000000001,\n",
+       "  0.8949999999999999,\n",
+       "  0.8550000000000001,\n",
+       "  0.8989999999999998,\n",
+       "  0.897,\n",
+       "  0.885,\n",
+       "  0.889,\n",
+       "  0.8880000000000001,\n",
+       "  0.876,\n",
+       "  0.8869999999999999,\n",
+       "  0.844,\n",
+       "  0.8939999999999999,\n",
+       "  0.9,\n",
+       "  0.889,\n",
+       "  0.8959999999999999,\n",
+       "  0.9019999999999999,\n",
+       "  0.8869999999999999,\n",
+       "  0.8940000000000001,\n",
+       "  0.8880000000000001,\n",
+       "  0.883,\n",
+       "  0.835],\n",
+       " [0.19999999999999998,\n",
+       "  0.39099999999999996,\n",
+       "  0.5890000000000001,\n",
+       "  0.637,\n",
+       "  0.671,\n",
+       "  0.6379999999999999,\n",
+       "  0.692,\n",
+       "  0.6980000000000001,\n",
+       "  0.716,\n",
+       "  0.74,\n",
+       "  0.733,\n",
+       "  0.726,\n",
+       "  0.77,\n",
+       "  0.744,\n",
+       "  0.768,\n",
+       "  0.781,\n",
+       "  0.7899999999999999,\n",
+       "  0.7900000000000001,\n",
+       "  0.795,\n",
+       "  0.8049999999999999,\n",
+       "  0.7849999999999999,\n",
+       "  0.7920000000000001,\n",
+       "  0.8140000000000001,\n",
+       "  0.7950000000000002,\n",
+       "  0.7939999999999999,\n",
+       "  0.793,\n",
+       "  0.8110000000000002,\n",
+       "  0.818,\n",
+       "  0.799,\n",
+       "  0.8029999999999999,\n",
+       "  0.821,\n",
+       "  0.804,\n",
+       "  0.8239999999999998,\n",
+       "  0.8110000000000002,\n",
+       "  0.8130000000000001,\n",
+       "  0.812,\n",
+       "  0.819,\n",
+       "  0.8099999999999999,\n",
+       "  0.8039999999999999,\n",
+       "  0.7869999999999999]]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TEST_ACC"
    ]
   },
   {
@@ -1290,6 +1723,189 @@
     "# .. _Discuss PyTorch on the Forums: https://discuss.pytorch.org/\n",
     "# .. _Chat with other users on Slack: https://pytorch.slack.com/messages/beginner/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-05T04:16:08.725858Z",
+     "start_time": "2019-12-05T04:16:08.711270Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1255\n",
+      "0.133\n",
+      "0.18650000000000003\n",
+      "0.1965\n",
+      "0.21000000000000005\n",
+      "0.225\n",
+      "0.23199999999999998\n",
+      "0.25150000000000006\n",
+      "0.26649999999999996\n",
+      "0.27349999999999997\n",
+      "0.29300000000000004\n",
+      "0.28450000000000003\n",
+      "0.3065\n",
+      "0.31299999999999994\n",
+      "0.31599999999999995\n",
+      "0.323\n",
+      "0.32399999999999995\n",
+      "0.32600000000000007\n",
+      "0.35750000000000004\n",
+      "0.33799999999999997\n",
+      "0.3625\n",
+      "0.376\n",
+      "0.3685\n",
+      "0.3835\n",
+      "0.393\n",
+      "0.39949999999999997\n",
+      "0.4370000000000001\n",
+      "0.44700000000000006\n",
+      "0.43800000000000006\n",
+      "0.44000000000000006\n",
+      "0.4675000000000001\n",
+      "0.471\n",
+      "0.4635000000000001\n",
+      "0.5040000000000002\n",
+      "0.5125\n",
+      "0.5205\n",
+      "0.5155000000000001\n",
+      "0.5394999999999999\n",
+      "0.5465\n",
+      "0.5745000000000001\n",
+      "=======\n",
+      "0.1375\n",
+      "0.5055\n",
+      "0.6855\n",
+      "0.7929999999999999\n",
+      "0.859\n",
+      "0.8880000000000002\n",
+      "0.9045\n",
+      "0.9205\n",
+      "0.9305000000000001\n",
+      "0.9424999999999999\n",
+      "0.9404999999999999\n",
+      "0.9445\n",
+      "0.9664999999999999\n",
+      "0.9594999999999999\n",
+      "0.9525\n",
+      "0.9689999999999998\n",
+      "0.9785\n",
+      "0.9780000000000001\n",
+      "0.9804999999999999\n",
+      "0.9869999999999999\n",
+      "0.9854999999999998\n",
+      "0.977\n",
+      "0.9784999999999998\n",
+      "0.9884999999999999\n",
+      "0.9884999999999999\n",
+      "0.9914999999999999\n",
+      "0.9955\n",
+      "0.993\n",
+      "0.982\n",
+      "0.9899999999999999\n",
+      "0.9760000000000002\n",
+      "0.9894999999999999\n",
+      "0.9925\n",
+      "0.9949999999999999\n",
+      "0.9974999999999998\n",
+      "0.9959999999999998\n",
+      "0.999\n",
+      "0.9889999999999999\n",
+      "0.9889999999999999\n",
+      "0.9814999999999999\n",
+      "=======\n",
+      "0.12800000000000003\n",
+      "0.306\n",
+      "0.5095000000000002\n",
+      "0.6305000000000001\n",
+      "0.6904999999999999\n",
+      "0.722\n",
+      "0.7235\n",
+      "0.759\n",
+      "0.764\n",
+      "0.7754999999999999\n",
+      "0.7875\n",
+      "0.8030000000000003\n",
+      "0.8155000000000001\n",
+      "0.8295\n",
+      "0.833\n",
+      "0.842\n",
+      "0.8554999999999999\n",
+      "0.8564999999999999\n",
+      "0.8755\n",
+      "0.873\n",
+      "0.8765000000000003\n",
+      "0.884\n",
+      "0.8895\n",
+      "0.9029999999999999\n",
+      "0.8905\n",
+      "0.8944999999999999\n",
+      "0.901\n",
+      "0.9169999999999998\n",
+      "0.9049999999999999\n",
+      "0.914\n",
+      "0.9179999999999999\n",
+      "0.924\n",
+      "0.9184999999999999\n",
+      "0.9199999999999999\n",
+      "0.9350000000000002\n",
+      "0.9399999999999997\n",
+      "0.9374999999999998\n",
+      "0.9369999999999999\n",
+      "0.9375\n",
+      "0.9400000000000001\n",
+      "=======\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in TRAIN_ACC:\n",
+    "    for j in i:\n",
+    "        print(float(j))\n",
+    "    print(\"=======\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-05T04:09:40.633397Z",
+     "start_time": "2019-12-05T04:09:40.623481Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "write() argument must be str, not list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-67-698cc486af1b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mloss_cpu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'loss_cpu.txt'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mloss_cpu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwritelines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAVE_LOSS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mloss_cpu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: write() argument must be str, not list"
+     ]
+    }
+   ],
+   "source": [
+    "loss_cpu=open('loss_cpu.txt','w')\n",
+    "\n",
+    "loss_cpu.writelines(AVE_LOSS)\n",
+    "loss_cpu.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1297,6 +1913,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
